# EthosPlotting

./: .gitignore  CMakeLists.txt  README.md  ThirdPartyDependencies.cmake  asd.py  build_app.sh
cmake/: ThirdPartyDependencies.cmake  compiler_config.cmake
core/inc/: main_window.h
core/src/: main.cpp  main_window.cpp
python_tools/: gen_flat_inc_tree.py  gen_full_inc_tree.py
src/: main.cpp
